--- a/1_prompt_engineering_exercise_with_assignment.ipynb
+++ b/1_prompt_engineering_exercise_with_assignment.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMl0YQMXUbDCyOKv0KCUeu0",
+      "authorship_tag": "ABX9TyMAZgKCq4siCwj3dqqYuo8H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,6 +38,23 @@
       ],
       "metadata": {
         "id": "uZrzv1WRFcII"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Prompt Engineering guides\n",
+        "- https://platform.openai.com/docs/guides/prompt-engineering\n",
+        "- Six strategies for getting bettwe results:\n",
+        "  - write clear instructions\n",
+        "  - Provide reference text\n",
+        "  - Split complex tasks into simpler subtasks\n",
+        "  - Give the model time to \"think\"\n",
+        "  - Use external tools\n",
+        "  - Test changes systematically"
+      ],
+      "metadata": {
+        "id": "-A2e_eK4RRIL"
       }
     },
     {
